...
    val carDetailViewModel: CarDetailViewModel = viewModel(
        factory = CarDetailViewModel.CarDetailViewModelFactory(
            loginViewModel
        )
    )
    var selectedTabIndex by remember { mutableStateOf(0) }
    val tabs = listOf("Home", "Contact")
    androidx.compose.material3.Scaffold(
        topBar = {
            Column {
                TopAppBar(
                    title = { Text(text = "Rent My Car", color = Color.White) },
                    colors = TopAppBarDefaults.topAppBarColors(
...
